# oneflow-ai

./: .dockerignore  .env  .env.example  .env.grafana  .env.pgadmin  .env.postgres  .env.postgres.production  .env.production  .env.redis  .env.redis.production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPLEMENTATION_GUIDE.sh  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  QUICK_IMPLEMENTATION_GUIDE.md  README.md  SECURITY.md  VERIFICATION.md  analytics_module.py  api_keys_example.json  cli_module.py  complete_main_module.py  config.example.json  config.json  config.schema.json  config_module.py  contributing.md  database_setup_guide.md  deployment_guide.md  developer_guide.md  (+39 more)
.github/: CICD_CHECKLIST.md  CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  pypi-publish.yml  security-scheduled.yml  tests.yml
docs/: CHANGELOG  DATA_GOVERNANCE.md  QUICKSTART.md  QUICK_MIGRATION.md  README_DEPENDENCIES.md  RELEASE_GUIDE.md  SECURITY_GUIDE.md  api_separation_guide.md  auth_guide.md  changelog.md  examples.md  installation_guide.md  packaging-guide.md  production_security_guide.md.md  project_structure.md  project_summary.md  quickstart.md  stage2_completion_summary.md  stage3_summary.md
docs/tests/: test_pricing_properties.py
grafana/dashboards/: README.md
infra/terraform/: .gitignore  Makefile  README.md  backend.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
k8s/: README.md  additional-resources.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
monitoring/: TESTING.md  docker-compose.yml  prometheus.yml
monitoring/otel/: otel-collector-config.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: nginx.conf
requirements/: prod
scripts/: backup.sh  cleanup-logs.sh  deploy.sh  health_check.sh  restore.sh  rotate_api_keys.py
src/: __init__.py  analytics.py  api_keys.py  auth.py  auth_v2.py  budget.py  cli.py  config.py  config.py.py  database.py  main.py  main_fixed.py  main_with_db.py  pricing.py  pricing_v2.py  provider_manager.py  real_api_integration.py  region_manager.py  router.py  security_middleware.py  settings.py  wallet.py
src/api/: __init__.py  app.py
src/api/common/: errors.py  init.py  responses.py
src/api/v1/: __init__.py  endpoints.py  schemas.py
src/core/: init.py  pricing.py  router.py  wallet.py
src/database/: migrations.py
src/middleware/: circuit_breaker.py
src/observability/: metrics.py  structured_logging.py  telemetry.py
src/providers/: __init__.py  anthropic_provider.py  audio_provider.py  base.py  base_provider.py  factory.py  gpt_provider.py  image_provider.py  openai_provider.py  video_provider.py
src/regions/: __init__.py  encryption.py  queue.py  storage.py
src/resilience/: circuit_breaker.py  rate_limiter.py  retry_handler.py
src/routing/: intelligent_router.py
src/security/: cors_config.py  key_rotation.py  rbac.py
src/web/: app.py
tests/: README.md  test_analytics.py  test_auth  test_budget.py  test_config.py  test_database  test_pricing.py  test_pricing_tables.py  test_providers.py  test_router.py  test_wallet.py
tests/e2e/: conftest.py  test_api_integration.py  test_complete_flow.py
tests/unit/: conftest.py  test_budget_pricing.py  test_providers_mock.py  test_routing.py
