[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneflow-ai"
version = "0.1.0"
description = "AI Model Aggregator with Pricing, Routing, Analytics & Authentication"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Sergey Voronin", email = "voroninsergeiai@gmail.com"}
]
keywords = ["ai", "ml", "api", "routing", "pricing", "aggregator"]
classifiers = [
    # Development status reflects the beta nature of the project
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]

web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

db = [
    "psycopg2-binary>=2.9.0",
]

auth = [
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
]

all = [
    "oneflow-ai[api,web,db,auth]",
]

[project.urls]
Homepage = "https://github.com/voroninsergei/oneflow-ai"
Repository = "https://github.com/voroninsergei/oneflow-ai"
Issues = "https://github.com/voroninsergei/oneflow-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
